--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-logging.level.org.springframework.web=debug
+logging.level.org.springframework.web=info
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2database
